--- a/app/templates/province/testingStandard.html
+++ b/app/templates/province/testingStandard.html
@@ -66,10 +66,10 @@
             data:[],
             cols: [[
                 {field: 'id', title: '序号'},
-				{field: 'name', title: '标准名称',edit:"text"},
-                {field: 'score', title: '换算分数',edit:"text"},
-				{field: 'bottom', title: '区间下限',edit:"text"},
-				{field: 'top', title: '区间上限',edit:"text"},
+				{field: 'name', title: '标准名称',edit:"text", sort: true},
+                {field: 'score', title: '换算分数',edit:"text", sort: true},
+				{field: 'bottom', title: '区间下限',edit:"text", sort: true},
+				{field: 'top', title: '区间上限',edit:"text", sort: true},
 				{field: 'level', title: '年级'},
 				{field: 'comment', title: '备注',edit:"text"},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
