--- a/app/templates/province/school.html
+++ b/app/templates/province/school.html
@@ -55,16 +55,12 @@
             elem: '#currentTableId',
             data:[],
             toolbar: '#toolbarDemo',
-            defaultToolbar: ['filter', 'exports', 'print', {
-                title: '提示',
-                layEvent: 'LAYTABLE_TIPS',
-                icon: 'layui-icon-tips'
-            }],
+            defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'id', title: '序号'},
-				{field: 'name', title: '学校名称'},
+				{field: 'name', title: '学校名称', sort: true},
                 {field: 'code', title: '学校代码'},
-				{field: 'type', title: '学校类比'},
+				{field: 'type', title: '学校类比', sort: true},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
             ]],
             limits: [10, 15, 20, 25, 50, 100],
