--- a/app/templates/province/schoolAccount.html
+++ b/app/templates/province/schoolAccount.html
@@ -48,11 +48,7 @@
             elem: '#currentTableId',
             data:[],
             toolbar: '#toolbarDemo',
-            defaultToolbar: ['filter', 'exports', 'print', {
-                title: '提示',
-                layEvent: 'LAYTABLE_TIPS',
-                icon: 'layui-icon-tips'
-            }],
+            defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'id', title: '序号'},
 				{field: 'name', title: '学校名称'},
