--- a/app/templates/school/selectStudent.html
+++ b/app/templates/school/selectStudent.html
@@ -78,19 +78,15 @@
 			elem: '#studentTableId',
 			data:[],
 			toolbar: '#studentToolBar',
-			defaultToolbar: ['filter', 'exports', 'print', {
-				title: '提示',
-				layEvent: 'LAYTABLE_TIPS',
-				icon: 'layui-icon-tips'
-			}],
+			defaultToolbar: ['filter', 'exports', 'print'],
 			cols: [[
 				{type: "checkbox", width: 50},
 				{field: 'id', title: '序号'},
-				{field: 'college_name', title: '学院（系）名称', minWidth: 150},
-				{field: 'grade', title: '年级'},
-				{field: 'class_name', title: '专业班级'},
-				{field: 'name', title: '姓名'},
-				{field: 'sex',  title: '性别'},
+				{field: 'college_name', title: '学院（系）名称', minWidth: 150, sort: true},
+				{field: 'grade', title: '年级', sort: true},
+				{field: 'class_name', title: '专业班级', sort: true},
+				{field: 'name', title: '姓名', sort: true},
+				{field: 'sex',  title: '性别', sort: true},
 				{field: 'student_number',  title: '学号', sort: true, minWidth: 150},
 				{field: 'comment',  title: '备注'}
 			]],
@@ -144,11 +140,7 @@
             elem: '#currentTableId',
             url: '/api/testingGradeStudent',
             toolbar: true,
-            defaultToolbar: ['filter', 'exports', 'print', {
-                title: '提示',
-                layEvent: 'LAYTABLE_TIPS',
-                icon: 'layui-icon-tips'
-            }],
+            defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'grade', title: '年级'},
                 {field: 'boy_num',  title: '男生人数'},
@@ -166,11 +158,7 @@
 		    elem: '#previousStudentId',
 		    url: '/api/getTestingSelectionBefore',
 		    toolbar: true,
-		    defaultToolbar: ['filter', 'exports', 'print', {
-		        title: '提示',
-		        layEvent: 'LAYTABLE_TIPS',
-		        icon: 'layui-icon-tips'
-		    }],
+		    defaultToolbar: ['filter', 'exports', 'print'],
 		    cols: [[
 		        {field: 'year', title: '年份'},
 		        {field: 'boy_num',  title: '男生人数'},
