--- a/app/templates/school/studentScore.html
+++ b/app/templates/school/studentScore.html
@@ -75,18 +75,14 @@
             elem: '#currentTableId',
             data:[],
             toolbar: 'true',
-            defaultToolbar: ['filter', 'exports', 'print', {
-                title: '提示',
-                layEvent: 'LAYTABLE_TIPS',
-                icon: 'layui-icon-tips'
-            }],
+            defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'id', title: '序号'},
-                {field: 'college_name', title: '学院（系）名称', minWidth: 150},
-                {field: 'grade', title: '年级'},
-                {field: 'class_name', title: '专业班级'},
-                {field: 'name', title: '姓名'},
-                {field: 'sex',  title: '性别'},
+                {field: 'college_name', title: '学院（系）名称', minWidth: 150, sort: true},
+                {field: 'grade', title: '年级', sort: true},
+                {field: 'class_name', title: '专业班级', sort: true},
+                {field: 'name', title: '姓名', sort: true},
+                {field: 'sex',  title: '性别', sort: true},
 				{field: 'student_number',  title: '学号', sort: true, minWidth: 150},
                 {field: 'year',  title: '体测年份'},
                 {field: 'score',  title: '总分'},
