--- a/app/templates/school/submitStatus.html
+++ b/app/templates/school/submitStatus.html
@@ -38,11 +38,7 @@
             elem: '#currentTableId',
             url: '/api/testingGradeStudent',
             toolbar: true,
-            defaultToolbar: ['filter', 'exports', 'print', {
-                title: '提示',
-                layEvent: 'LAYTABLE_TIPS',
-                icon: 'layui-icon-tips'
-            }],
+            defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'grade', title: '年级'},
                 {field: 'boy_num',  title: '男生人数'},
