--- a/app/templates/school/uploadStudent.html
+++ b/app/templates/school/uploadStudent.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/static/layuimini/lib/jq-module/zyupload/skins/zyupload-1.0.0.min.css" media="all">
 <div class="layuimini-container layuimini-page-anim">
     <div class="layuimini-main">
+        <div class="content-margin"><button class="layui-btn layui-btn-lg" id="download">下载学生信息导入模板</button></div>
 		<div id="zyupload" class="zyupload"></div>
 		<script type="text/html" id="toolbarDemo">
 		    <div class="layui-btn-container">
@@ -27,11 +28,7 @@
             elem: '#currentTableId',
             url: '/api/gradeStudent',
 			toolbar:'#toolbarDemo',
-			defaultToolbar: ['filter', 'exports', 'print', {
-                title: '提示',
-                layEvent: 'LAYTABLE_TIPS',
-                icon: 'layui-icon-tips'
-            }],
+			defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'id', title: 'ID', sort: true},
                 {field: 'grade', title: '年级'},
@@ -89,6 +86,10 @@
             }
 				
         });
+
+        $('#download').bind('click',function(){
+			window.location.href='/api/downloadStudentTemplate';
+		});
 
     });
 </script>
