--- a/app/templates/province/projectRank.html
+++ b/app/templates/province/projectRank.html
@@ -62,21 +62,16 @@
             table = layui.table,
             miniPage = layui.miniPage;
 		form.render();
-		var data=[
-			{
-				'id':1,
-				'school_name':"zju",
-				'score':70.2,
-				'score_rank':1,
-				'pass_rate':"100%",
-				'pass_rank':1,
-				'good_rate':'60%',
-				'good_rank':2,
-				'excellent_rate':"60%",
-				'excellent_rank':3
-			}
-	
-		]
+		var excTrans=function(d){
+            return (d.excellent_rate*100)+"%"
+        }
+        var goodTrans=function(d){
+            return (d.good_rate*100)+"%"
+        }
+        var passTrans=function(d){
+            return (d.pass_rate*100)+"%"
+        }
+
         table.render({
             elem: '#currentTableId',
             data:[],
@@ -87,11 +82,11 @@
 				{field: 'school_name', title: '学校名称'},
                 {field: 'score', title: '平均分数', sort: true},
 				{field: 'score_rank', title: '分数排名'},
-				{field: 'pass_rate', title: '及格率', sort: true},
+				{field: 'pass_rate', title: '及格率', sort: true,templet:passTrans},
 				{field: 'pass_rank', title: '及格率排名'},
-				{field: 'good_rate', title: '良好率', sort: true},
+				{field: 'good_rate', title: '良好率', sort: true,templet:goodTrans},
 				{field: 'good_rank', title: '良好率排名'},
-				{field: 'excellent_rate', title: '优秀率', sort: true},
+				{field: 'excellent_rate', title: '优秀率', sort: true,templet:excTrans},
 				{field: 'excellent_rank', title: '优秀率排名'}
             ]],
             limits: [10, 15, 20, 25, 50, 100],
