edit server mysql

--- a/app/templates/province/uploadScore.html
+++ b/app/templates/province/uploadScore.html
@@ -9,8 +9,8 @@
 	</div>
 
 	<div class="content-margin"><button class="layui-btn layui-btn-lg" id="analyseAll">一键计算所有成绩</button></div>
-	<div class="content-margin"><button class="layui-btn layui-btn-lg" id="analyseStudent">点击计算学生成绩</button></div>
-	<div class="content-margin"><button class="layui-btn layui-btn-lg" id="analyseSchool">点击计算学校成绩</button></div>
+<!--	<div class="content-margin"><button class="layui-btn layui-btn-lg" id="analyseStudent">点击计算学生成绩</button></div>-->
+<!--	<div class="content-margin"><button class="layui-btn layui-btn-lg" id="analyseSchool">点击计算学校成绩</button></div>-->
 </div>
 
 
