--- a/app/templates/province/check.html
+++ b/app/templates/province/check.html
@@ -2,6 +2,7 @@
     <div class="layuimini-main">
 
 		<div>{{model['school_name']}}</div>
+        <div>{{model['type']|default("")}}</div>
 		<div>{{model['comment']|default("无备注")}}</div>
         <div style="display:none;" id="id">{{model['id']}}</div>
         <script type="text/html" id="toolbarDemo">
@@ -62,8 +63,10 @@
          * toolbar事件监听
          */
         table.on('toolbar(currentTableFilter)', function (obj) {
-            if (obj.event === 'checkTrue') {   // 监听审核通过
-                $.post('/api/checkTestingStudent',{id:$('#id').text(),status:1},function(res){
+            layer.prompt({title: '请输入审核备注，没有则留空', value: ' '}, function(value, index){
+			  console.log("点击了提交");
+                if (obj.event === 'checkTrue') {   // 监听审核通过
+                $.post('/api/checkTestingStudent',{id:$('#id').text(),status:1,comment:value},function(res){
                     if(res.code==0){
                         miniPage.hashChange("/province/checkList");
                         history.back(-1);
@@ -72,18 +75,21 @@
                         layer.msg("系统错误！"+res.msg);
                     }
                 });
-            } 
-			else if (obj.event === 'checkFalse') {   // 监听审核不通过
-                $.post('/api/checkTestingStudent',{id:$('#id').text(),status:0},function(res){
-                    if(res.code==0){
-                        layer.msg("审核成功");
-                        miniPage.hashChange("/province/checkList");
-                    }
-                    else{
-                        layer.msg("系统错误！"+res.msg);
-                    }
-                });
-            } 
+                }
+                else if (obj.event === 'checkFalse') {   // 监听审核不通过
+                    $.post('/api/checkTestingStudent',{id:$('#id').text(),status:0,comment:value},function(res){
+                        if(res.code==0){
+                            layer.msg("审核成功");
+                            miniPage.hashChange("/province/checkList");
+                        }
+                        else{
+                            layer.msg("系统错误！"+res.msg);
+                        }
+                    });
+                }
+
+			});
+
         });
     });
 </script>
