change home,schoolt.type,schoolRank.title add shcool_downloadAllScore

--- a/app/templates/province/editSchool.html
+++ b/app/templates/province/editSchool.html
@@ -19,10 +19,10 @@
             <div class="layui-input-block">
                 {% if school.type=="本科" %}
                 <input type="radio" name="type" value="本科" title="本科" checked=>
-                <input type="radio" name="type" value="专科" title="专科">
+                <input type="radio" name="type" value="高职高专" title="高职高专">
                 {% else %}
                 <input type="radio" name="type" value="本科" title="本科" >
-                <input type="radio" name="type" value="专科" title="专科" checked=>
+                <input type="radio" name="type" value="高职高专" title="高职高专" checked=>
                 {% endif %}
             </div>
         </div>
