--- a/app/templates/province/addSchool.html
+++ b/app/templates/province/addSchool.html
@@ -17,7 +17,7 @@
             <label class="layui-form-label required">学校类比</label>
             <div class="layui-input-block">
                 <input type="radio" name="type" value="本科" title="本科" checked="">
-                <input type="radio" name="type" value="专科" title="专科">
+                <input type="radio" name="type" value="高职高专" title="高职高专">
             </div>
         </div>
 		
