--- a/app/templates/school/studentScore.html
+++ b/app/templates/school/studentScore.html
@@ -4,7 +4,7 @@
         <fieldset class="table-search-fieldset">
             <legend>搜索信息</legend>
             <div style="margin: 10px 10px 10px 10px">
-                <form class="layui-form layui-form-pane" action="">
+                <form class="layui-form layui-form-pane" action="" lay-filter="serchForm">
                     <div class="layui-form-item">
                         <div class="layui-inline">
                             <label class="layui-form-label">年份</label>
@@ -59,7 +59,12 @@
         <script type="text/html" id="currentTableBar">
             <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="detail">查看详情</a>
         </script>
-       
+
+       <script type="text/html" id="toolbarDemo">
+         <div class="layui-btn-container">
+           <button class="layui-btn layui-btn-sm" lay-event="dowonloadScore">下载全部详细成绩</button>
+         </div>
+       </script>
 
     </div>
 </div>
@@ -74,7 +79,7 @@
         table.render({
             elem: '#currentTableId',
             data:[],
-            toolbar: 'true',
+            toolbar: '#toolbarDemo',
             defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
                 {field: 'id', title: '序号'},
@@ -115,7 +120,6 @@
         table.on('tool(currentTableFilter)', function (obj) {
 		    var data = obj.data;
 		    if (obj.event === 'detail') {
-		    console.log(data);
 				var content = miniPage.getHrefContent('/school/scoreDetail?id='+data.id);
                 var openWH = miniPage.getOpenWidthHeight();
 
@@ -128,7 +132,14 @@
                 });
 		    }
 		});
-       
+       table.on('toolbar(currentTableFilter)',function(obj){
+            if (obj.event=="dowonloadScore"){
+                year=form.val('serchForm').year
+                layer.confirm("您确定要下载"+year+"年的所有数据吗？",function(){
+                    window.location.href="/api/downloadAllScores?year="+year;
+                })
+            }
+       })
        var refreshTable=function(){
             $('#search').click();
         };
