edit resubmit logy

--- a/app/templates/province/checkList.html
+++ b/app/templates/province/checkList.html
@@ -23,6 +23,7 @@
 				{field: 'name', title: '学校名称'},
                 {field: 'total_num', title: '提交人数'},
 				{field: 'update_time', title: '提交时间'},
+				{field: 'type', title: '提交类别'},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
             ]],
             limits: [10, 15, 20, 25, 50, 100],
