--- a/app/templates/province/check.html
+++ b/app/templates/province/check.html
@@ -1,9 +1,9 @@
 <div class="layuimini-container layuimini-page-anim">
     <div class="layuimini-main">
 
-		<div>{{model['school_name']}}</div>
-        <div>{{model['type']|default("")}}</div>
-		<div>{{model['comment']|default("无备注")}}</div>
+		<div>学校名称：{{model['school_name']}}</div>
+        <div>申请类型：{{model['type']|default("")}}</div>
+		<div>申请备注：{{model['comment']|default("无备注")}}</div>
         <div style="display:none;" id="id">{{model['id']}}</div>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
@@ -63,11 +63,10 @@
          * toolbar事件监听
          */
         table.on('toolbar(currentTableFilter)', function (obj) {
-            layer.prompt({title: '请输入审核备注，没有则留空', value: ' '}, function(value, index){
-			  console.log("点击了提交");
                 if (obj.event === 'checkTrue') {   // 监听审核通过
                 $.post('/api/checkTestingStudent',{id:$('#id').text(),status:1,comment:value},function(res){
                     if(res.code==0){
+                        layer.msg("核通过");
                         miniPage.hashChange("/province/checkList");
                         history.back(-1);
                     }
@@ -77,8 +76,10 @@
                 });
                 }
                 else if (obj.event === 'checkFalse') {   // 监听审核不通过
+                    layer.prompt({title: '请输入审核备注，没有则留空', value: ' '}, function(value, index){
                     $.post('/api/checkTestingStudent',{id:$('#id').text(),status:0,comment:value},function(res){
                         if(res.code==0){
+                            yer.close(index);
                             layer.msg("审核成功");
                             miniPage.hashChange("/province/checkList");
                         }
@@ -86,9 +87,10 @@
                             layer.msg("系统错误！"+res.msg);
                         }
                     });
-                }
 
-			});
+                })
+
+			}
 
         });
     });
