--- a/app/templates/province/check.html
+++ b/app/templates/province/check.html
@@ -64,11 +64,10 @@
          */
         table.on('toolbar(currentTableFilter)', function (obj) {
                 if (obj.event === 'checkTrue') {   // 监听审核通过
-                $.post('/api/checkTestingStudent',{id:$('#id').text(),status:1,comment:value},function(res){
+                $.post('/api/checkTestingStudent',{id:$('#id').text(),status:1},function(res){
                     if(res.code==0){
-                        layer.msg("核通过");
+                        layer.msg("审核通过");
                         miniPage.hashChange("/province/checkList");
-                        history.back(-1);
                     }
                     else{
                         layer.msg("系统错误！"+res.msg);
@@ -79,7 +78,7 @@
                     layer.prompt({title: '请输入审核备注，没有则留空', value: ' '}, function(value, index){
                     $.post('/api/checkTestingStudent',{id:$('#id').text(),status:0,comment:value},function(res){
                         if(res.code==0){
-                            yer.close(index);
+                            layer.close(index);
                             layer.msg("审核成功");
                             miniPage.hashChange("/province/checkList");
                         }
