--- a/app/templates/province/testingProject.html
+++ b/app/templates/province/testingProject.html
@@ -28,8 +28,8 @@
                 {field: 'id', title: '序号'},
 				{field: 'name', title: '项目名称'},
                 {field: 'sex', title: '性别'},
-				{field: 'weight', title: '权重',edit:"text"},
-				{field: 'comment', title: '备注',edit:"text"},
+				{field: 'weight', title: '权重'},
+				{field: 'comment', title: '备注'},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
             ]],
             limits: [10, 15, 20, 25, 50, 100],
