--- a/app/templates/school/selectStudent.html
+++ b/app/templates/school/selectStudent.html
@@ -9,34 +9,31 @@
                         <div class="layui-inline">
                             <label class="layui-form-label">年级</label>
                             <div class="layui-input-inline">
-<!--                                <select class="layui-inline" name="grade" lay-verify="" lay-search>-->
-<!--                                	<option value="2020">2020</option>-->
-<!--                                	<option value="2019">2019</option>-->
-<!--                                	<option value="2018">2018</option>-->
-<!--                                </select>   -->
-								<input type="text" name="grade" autocomplete="off" class="layui-input">
+                                <select class="layui-inline" name="grade" >
+                                	<option value="">所有年级</option>
+                                    {% for e in model['grades']%}
+                                	<option value="{{e}}">{{e}}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
                         </div>
 						<div class="layui-inline">
 							<label class="layui-form-label">学院</label>
 							<div class="layui-input-inline">
-<!--							    <select class="layui-inline" name="college_name" lay-verify="" lay-search>-->
-<!--									<option value="数学计算机">数学计算机</option>-->
-<!--									<option value="物理信息">物理信息</option>-->
-<!--									<option value="体育学院">体育学院</option>-->
-<!--							    </select>   -->
-								<input type="text" name="college_name" autocomplete="off" class="layui-input">
+							    <select class="layui-inline" name="college_name"  lay-search lay-filter="collegeSelect">
+									<option value="">请选择学院</option>
+                                    {% for e in model['colleges']%}
+									<option value="{{e}}">{{e}}</option>
+                                    {% endfor %}
+							    </select>
 							</div>
 						 </div>
 						 <div class="layui-inline">
-						     <label class="layui-form-label">专业</label>
+						     <label class="layui-form-label">专业班级</label>
 						     <div class="layui-input-inline">
-<!--						         <select class="layui-inline" name="major_name" lay-verify="" lay-search>-->
-<!--						         	<option value="物理学">物理学</option>-->
-<!--						         	<option value="计算机">计算机</option>-->
-<!--						         	<option value="体育">体育</option>-->
-<!--						         </select>   -->
-								 <input type="text" name="major_name" autocomplete="off" class="layui-input">
+						         <select class="layui-inline" name="class_name" id="class_name" lay-search>
+						         	<option value="">请选择专业班级</option>
+						         </select>
 						     </div>
 						 </div>
                         <div class="layui-inline">
@@ -75,7 +72,20 @@
             form = layui.form,
             table = layui.table,
             miniPage = layui.miniPage;
-			
+		form.render();
+		//学院选完之后，专业自动跳出来
+        form.on('select(collegeSelect)', function(data){
+          $.get('/api/getClassnames?college_name='+data.value,function(res){
+                if(res.code==0){
+                    $("#class_name").empty();
+                    $("#class_name").append("<option value=''>请选择专业班级</option>");
+                    $.each(res.data,function(k,v){
+                        $("#class_name").append("<option value="+v+">"+v+"</option>");
+                    })
+                    form.render();
+                }
+          })
+        });
 
 		table.render({
 			elem: '#studentTableId',
