--- a/app/templates/province/uploadSchool.html
+++ b/app/templates/province/uploadSchool.html
@@ -51,7 +51,7 @@ $(function () {
             }
         });
          $('#download').bind('click',function(){
-			window.location.href='/api/downloadSchoolTemplate';
+            window.open('/api/downloadSchoolTemplate','_blank');
 		});
     });
 </script>
