--- a/app/templates/school/submitStatus.html
+++ b/app/templates/school/submitStatus.html
@@ -88,7 +88,7 @@
 			});
 		});
 		$('#download').bind('click',function(){
-		    window.location.href="/api/downloadScoreTemplate";
+		    window.open("/api/downloadScoreTemplate",'_blank');
 		})
 
 
