--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -143,7 +143,7 @@
 					if(res.code==0){
 						window.location.href=res.data.url;
 					}
-					else layer.msg('账号或密码错误');
+					else layer.msg(res.msg);
 				});
             return false;
         });
