--- a/app/templates/province/projectRank.html
+++ b/app/templates/province/projectRank.html
@@ -107,7 +107,7 @@
                 layer.msg("请选择院校类别");
                 return false;
             }
-            var index = layer.load(0, {shade:0.2}); //目前没有最长时间，直接运行到结束
+            var index = layer.load(0, {shade:0.2,time: 10*1000}); //目前没有最长时间，直接运行到结束
             $.get('/api/projectRank',data.field,function(res){
 				if(res.code==0){
 				    layer.close(index);
