--- a/app/templates/province/schoolRank.html
+++ b/app/templates/province/schoolRank.html
@@ -92,10 +92,10 @@
 
         // 监听搜索操作
         form.on('submit(data-search-btn)', function (data) {
-            var index = layer.load(0, {shade:0.2}); //目前没有最长时间，直接运行到结束
+            var index = layer.load(0, {shade:0.2,time: 10*1000}); //目前没有最长时间，直接运行到结束
             $.get('/api/schoolRank',data=data.field,function(res){
+				layer.close(index);
 				if(res.code==0){
-				    layer.close(index);
 				    console.log(res.data);
 					var newdata=res.data['data'];
 					var newtitle=baseTitle.concat(res.data['title']);
