--- a/app/templates/province/testingProject.html
+++ b/app/templates/province/testingProject.html
@@ -5,7 +5,7 @@
 		        <button class="layui-btn layui-btn-normal layui-btn-sm data-add-btn" lay-event="add"> 新增体测项目 </button>
 		    </div>
 		</script>
-        <table class="layui-hide" id="currentTableId" lay-filter="currentTableFilter"></table>
+        <table class="layui-hide" id="currentProject" lay-filter="currentTableFilter"></table>
 		<script type="text/html" id="currentTableBar">
 		    <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="edit">编辑项目标准</a>
 		</script>
@@ -21,7 +21,7 @@
 			
 
         table.render({
-            elem: '#currentTableId',
+            elem: '#currentProject',
 			toolbar: '#toolbarDemo',
             data:[],
             cols: [[
@@ -47,8 +47,9 @@
         });
 		$.get('/api/project',function(res){
 			if(res.code==0){
+				console.log(res.data);
 				newdata=res.data?res.data:[];
-				table.reload('currentTableId',{data:newdata});
+				table.reload('currentProject',{data:newdata});
 			}
 		})
 		table.on('toolbar(currentTableFilter)', function (obj) {
