--- a/app/templates/school/selectStudent.html
+++ b/app/templates/school/selectStudent.html
@@ -99,7 +99,7 @@
 				{field: 'grade', title: '年级', sort: true},
 				{field: 'class_name', title: '专业班级', sort: true},
 				{field: 'name', title: '姓名', sort: true},
-				{field: 'sex',  title: '性别', sort: true},
+				{field: 'sex',  title: '性别', sort: true,templet:function(d){return d.sex==0?"女":"男";}},
 				{field: 'student_number',  title: '学号', sort: true, minWidth: 150},
 				{field: 'comment',  title: '备注'}
 			]],
@@ -130,20 +130,26 @@
 		table.on('toolbar(studentTableFilter)',function(obj){
 			if(obj.event === 'add'){
 			    var checkStatus = table.checkStatus('studentTableId');
+			    if(checkStatus.data.length==0){
+			        layer.msg("请至少选择一项！");
+			        return ;
+			    }
 			    var student_ids=[];
 			    $.each(checkStatus.data,function(index,e){
 			        student_ids.push(e.id);
 			    });
-			    $.post("/api/testingStudent",{"student_ids":student_ids.join(",")},function(res){
-			    console.log(res)
-			        if(res.code==0){
-			            console.log(res.data);
-			            layer.msg("请求成功，共添加"+res.data.total_num+"人，成功"+res.data.success_num+"人")
-			        }
-			        else{
-			            layer.msg("添加失败，"+res.msg);
-			        }
-			    });
+			    var index=layer.load(0,{shade:0.2,time: 10*1000})
+                $.post("/api/testingStudent",{"student_ids":student_ids.join(",")},function(res){
+                console.log(res)
+                    layer.close(index)
+                    if(res.code==0){
+                        console.log(res.data);
+                        layer.msg("请求成功，共添加"+res.data.total_num+"人，成功"+res.data.success_num+"人")
+                    }
+                    else{
+                        layer.msg("添加失败，"+res.msg);
+                    }
+                });
 			}
 		});
         refreshTable()
