--- a/app/templates/school/uploadStudent.html
+++ b/app/templates/school/uploadStudent.html
@@ -88,7 +88,7 @@
         });
 
         $('#download').bind('click',function(){
-			window.location.href='/api/downloadStudentTemplate';
+            window.open('/api/downloadStudentTemplate','_blank');
 		});
 
     });
